# pymoai_demo_service

./: Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
run_service/: creds.json  functions_msx.py  run.py  run_service.py
run_service/nlp-test-data/: partition_test.py
run_service/nlp-test-data/datasets_20/: nlp_test_0.csv  nlp_test_1.csv  nlp_test_10.csv  nlp_test_11.csv  nlp_test_12.csv  nlp_test_13.csv  nlp_test_14.csv  nlp_test_15.csv  nlp_test_16.csv  nlp_test_17.csv  nlp_test_18.csv  nlp_test_19.csv  nlp_test_2.csv  nlp_test_20.csv  nlp_test_21.csv  nlp_test_3.csv  nlp_test_4.csv  nlp_test_5.csv  nlp_test_6.csv  nlp_test_7.csv  nlp_test_8.csv  nlp_test_9.csv
