[tool.poetry]
name = "guardian"
version = "0.1.0"
description = ""
authors = ["Niklaus Parcell <nik@mosaics.ai>", "George Patterson <george@mosaics.ai"]
readme = "README.md"

[tool.poetry.scripts]
coverage = "pytest --cov=guardian tests/"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
boto3 = "^1.26.68"
click = "8.1.3"
firebase = "3.0.1"
firebase-admin = "5.1.0"
joblib = "0.15.1"
keras = "2.6.0"
nltk = "3.7"
pytz = "2021.3"
pyyaml = "6.0"
scikit-learn = "0.23.1"
scipy = "1.7.0"
svix-ksuid = "0.6.0"
tensorflow = "2.6.4"
tensorflow-addons = "0.14.0"
tensorflow-datasets = "4.4.0"
tensorflow-estimator = "2.6.0"
tensorflow-hub = "0.9.0"
tensorflow-io = "0.21.0"
tensorflow-io-gcs-filesystem = "0.21.0"
tensorflow-metadata = "1.2.0"
tensorflow-model-optimization = "0.7.0"
termcolor = "1.1.0"
twython = "3.9.1"
xgboost = "1.6.2"
pydantic = "1.9.2"
rich = "12.0.1"
tflite-model-maker = "0.3.2"
numpy = "1.19.5"
pandas = "1.3.3"
pydantic-yaml = "^0.9.0"
shap = "^0.41.0"
dacite = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
isort = "^5.12.0"
black = "22.3.0"
pytest-cov = "^4.0.0"
flake8 = "*"
mypy = "*"
interrogate = "*"
typed-ast = "^1.5.4"
pylint = "*"
pyinstaller = "^5.8.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | local
  )/
)
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"